--- a/pages/album/uploader/uploader.wxml
+++ b/pages/album/uploader/uploader.wxml
@@ -8,8 +8,8 @@
 <view class="uploadArea">
   <!-- 图片上传器 -->
   <van-uploader file-list="{{fileList}}" preview-size="225rpx" multiple="ture" max-count="9" max-size="5242880"
-    accept="image" capture="['album']" image-fit="aspectFit" use-before-read bind:before-read="beforeRead"
-    bind:after-read="afterRead" bind:delete="deleteImg" bind:oversize="overSizeImg" upload-text="选择图片" />
+    accept="media" image-fit="aspectFit" use-before-read bind:before-read="beforeRead" bind:after-read="afterRead"
+    bind:delete="deleteImg" bind:oversize="overSizeImg" upload-text="选择图片" />
 </view>
 
 <!-- 选择上传文件夹 -->
