--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -37,10 +37,12 @@ page {
   height: 140rpx;
   box-sizing: border-box;
   padding: 35rpx;
+  margin-bottom: 10rpx;
 }
 
 .tip_date {
   margin-top: 10rpx;
+  color: rgb(35, 58, 160);
 }
 
 .btnArea {
@@ -69,17 +71,6 @@ page {
   display: flex;
   flex-direction: row;
   border-radius: 20rpx;
-}
-
-.imgArea1 {
-  display: flex;
-  align-items: center;
-  justify-items: center;
-}
-
-.img2 {
-  width: 40%;
-  height: 40%;
 }
 
 .navigateName {
