--- a/pages/album/album.wxml
+++ b/pages/album/album.wxml
@@ -21,7 +21,7 @@
 	<!-- 工具类ToolBar -->
 	<view class="top-button">
 		<van-checkbox class="upload-tips" style="position:absolute;right:15rpx;top:18rpx;" shape="square" icon-size="45rpx" bind:change="checkboxChange" value="{{toolBar.deeper}}">深度遍历</van-checkbox>
-		<picker bindchange="bindPickerChange" value="{{toolBar.selectFolder}}" range="{{toolBar.folder}}">
+		<picker bind:change="bindPickerChange" value="{{toolBar.selectFolder}}" range="{{toolBar.folder}}">
 			<view class="upload-tips" style="margin-left:32rpx;">
 				当前文件夹： {{toolBar.folder[toolBar.selectFolder]}}
 			</view>
@@ -35,7 +35,7 @@
 
 				<!-- 上传预留位 -->
 				<block wx:if="{{item.type === 'add'}}">
-					<view class="upload-add" bindtap="goToUpload">
+					<view class="upload-add" bind:tap="goToUpload">
 						<a class="tips">点击或长按图片</a>
 						<van-icon name="photograph" size="120rpx" style="position: absolute; top: 57rpx; left: 63rpx" />
 						<text>上传图片</text>
@@ -44,12 +44,12 @@
 
 				<!-- 相册图片预留位 -->
 				<block wx:elif="{{item.type == undefined && item!=0}}">
-					<van-image width="244rpx" height="242rpx" lazy-load fit="cover" class="album-item" bindtap="enterPreviewMode" bindlongpress="showActions" src="{{item+'!preview'}}" data-src="{{item}}" />
+					<van-image width="244rpx" height="242rpx" lazy-load fit="cover" class="album-item" bind:tap="enterPreviewMode" bind:longpress="showActions" src="{{item+'!preview'}}" data-src="{{item}}" />
 				</block>
 
 				<!-- 下一页预留位 -->
 				<block wx:elif="{{item.type === 'next'}}">
-					<view class="upload-add" bindtap="nextPage">
+					<view class="upload-add" bind:tap="nextPage">
 						<van-icon name="more" size="110rpx" style="position: absolute; top: 60rpx; left: 66rpx" />
 						<text>下一页</text>
 					</view>
@@ -60,13 +60,13 @@
 					<!-- 开启管理员模式 -->
 					<view class="upload-add">
 						<van-icon name="smile" size="110rpx" style="position: absolute; top: 60rpx; left: 66rpx" />
-						<text style="font-size:36rpx;" bindlongpress="rightOfDelete">没有图片了</text>
+						<text style="font-size:36rpx;" bind:longpress="rightOfDelete">没有图片了</text>
 					</view>
 				</block>
 
 				<!-- 无图透明 -->
 				<block wx:else>
-					<view class="album-item empty"></view>
+					<view class="album-item empty" />
 				</block>
 
 			</block>
@@ -75,10 +75,10 @@
 </scroll-view>
 
 <!-- 预览模式 -->
-<swiper class="swiper-container" duration="{{slideDuration}}" current="{{previewIndex}}" bindtap="leavePreviewMode" style="display: {{previewMode ? 'block' : 'none'}};">
+<swiper class="swiper-container" duration="{{slideDuration}}" current="{{previewIndex}}" bind:tap="leavePreviewMode" style="display: {{previewMode ? 'block' : 'none'}};">
 	<block wx:for="{{albumList}}" wx:for-item="item" wx:key="item">
 		<swiper-item>
-			<image wx:if="{{previewMode}}" data-src="{{item}}" bindlongpress="showActions" lazy-load="true" src="{{item + '!weixin'}}" mode="aspectFit" />
+			<image wx:if="{{previewMode}}" data-src="{{item}}" bind:longpress="showActions" lazy-load="true" src="{{item + '!weixin'}}" mode="aspectFit" />
 		</swiper-item>
 	</block>
 </swiper>
