--- a/app.wxss
+++ b/app.wxss
@@ -1,4 +1,4 @@
 page {
-    background-color: rgb(241, 241, 241);
+  background-color: rgb(241, 241, 241);
 }
-@import 'app-wxa-auto-dark.wxss'
+@import 'app-wxa-auto-dark.wxss';
