--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -11,7 +11,12 @@
 
   <!-- 页面跳转按钮区域 -->
   <view class="btnArea" style="color:#515151;height:{{navigateHeight * navigationList.length + 3}}rpx;">
-    <view class="navigateBtn" wx:for="{{navigationList}}" wx:key="id" bind:tap="{{item.bindEvent}}" data-item="{{item}}"
+    <view
+      class="navigateBtn"
+      wx:for="{{navigationList}}"
+      wx:key="id"
+      bind:tap="{{item.bindEvent}}"
+      data-item="{{item}}"
       style="height:{{navigateHeight + 1}}rpx;">
       <!-- 按钮 -->
       <view class="btn" id="{{'id' + item.id}}">
@@ -26,6 +31,7 @@
   </view>
 
   <!-- 底部文字区域 -->
-  <view class="bottomText">Copyright<view style="color:#9dbdc6" bind:tap="author">@Naomi</view>.All Rights
-    Reserved.</view>
+  <view class="bottomText"
+    >Copyright<view style="color: #9dbdc6" bind:tap="author">@Naomi</view>.All Rights Reserved.</view
+  >
 </view>
