--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -11,7 +11,7 @@ page {
   padding-bottom: 20prx;
 }
 
-.tip_container {
+.tip-container {
   width: 640rpx;
   margin-top: 30rpx;
   box-shadow: 0rpx 0rpx 25rpx 3rpx rgb(214, 214, 214);
@@ -25,13 +25,13 @@ page {
   background: linear-gradient(to bottom right, #9dbdc6, #bfcad1);
 }
 
-.tip_img {
+.tip-img {
   margin-top: 10rpx;
   width: 90%;
   border-radius: 20rpx;
 }
 
-.tip_msg {
+.tip-msg {
   width: 100%;
   height: 140rpx;
   color: rgb(20, 93, 122);
@@ -40,7 +40,7 @@ page {
   margin-bottom: 10rpx;
 }
 
-.tip_date {
+.tip-date {
   margin-top: 10rpx;
   color: rgb(4, 71, 110);
 }
